--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "firebase": "^11.6.1",
+    "framer-motion": "^12.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
@@ -27,6 +28,5 @@
     "globals": "^16.0.0",
     "react-router-dom": "^7.5.1",
     "vite": "^6.3.1"
-
   }
 }
